[package]
name = "rusty_psql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
azure_core = { version = "0.20", features = ["enable_reqwest_rustls"] }
azure_identity = { version = "0.20", default-features = false }
azure_security_keyvault = "0.20.0"
azure_vault_secrets = "0.1.0"
clap = { version = "4.5", features = ["derive"] }
db_config = "0.1.0"
dotenv = "0.15"
hickory-resolver = "0.24"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
